RCPP first commit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,9 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    mvtnorm
+    mvtnorm,
+    Rcpp
 URL: https://github.com/lomidzebeka/project, https://lomidzebeka.github.io/project/
 BugReports: https://github.com/lomidzebeka/project/issues
+LinkingTo: 
+    Rcpp
