--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,8 @@
 
 S3method(plot,mvnpdf)
 export(mvnpdf)
+export(mvnpdfoptim)
+export(mvnpdfsmart)
+importFrom(Rcpp,sourceCpp)
 importFrom(mvtnorm,dmvnorm)
+useDynLib(project, .registration = TRUE)
