--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,mvnpdf)
 export(mvnpdf)
 export(mvnpdfoptim)
 export(mvnpdfsmart)
+export(timesTwo)
 importFrom(Rcpp,sourceCpp)
 importFrom(mvtnorm,dmvnorm)
 useDynLib(project, .registration = TRUE)
